--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "pg-promise": "^11.4.3",
+    "type-graphql": "^1.1.1",
     "typeorm": "^0.3.15"
   },
   "devDependencies": {
