--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "jsonwebtoken": "^9.0.0",
     "pg-promise": "^11.4.3",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.3.15"
@@ -24,6 +25,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.3",
     "dotenv": "^16.0.3",
     "ts-node-dev": "^2.0.0",
