--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc -p .",
-    "start": "tsc -p . && node dist/index.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
