--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,9 @@
 {
     "version": 2,
-    "build": [
-        {
-            "src": "./dist/index.js",
-            "use": "@vercel/node"
-        }
-    ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/dist/"
+            "dest": "/"
         }
     ]
 }
