--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,15 @@
 {
     "version": 2,
+    "build": [
+        {
+            "src": "./dist/index.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "/"
+            "src": "./dist/(.*)",
+            "dest": "./dist/"
         }
     ]
 }
